# desk_cast

./: .gitignore  CMakeLists.txt  Makefile  README.md  desk_cast
include/: cast_app.hpp  cast_device.hpp  chromecast.hpp  default_media_receiver.hpp  device.hpp  dial_discovery.hpp  dlna_device.hpp  mdns_discovery.hpp  media_renderer.hpp  socketwrapper.hpp  ssdp_discovery.hpp  upnp_device.hpp  utils.hpp  webserver.hpp
include/capture/: desktop_capture.hpp
include/http/: cookie.hpp  request.hpp  response.hpp  webserver.hpp
include/rapidxml/: rapidxml_ext.hpp
proto/: CMakeLists.txt
src/: cast_app.cpp  cast_device.cpp  chromecast.cpp  dial_discovery.cpp  dlna_device.cpp  main.cpp  mdns_discovery.cpp  ssdp_discovery.cpp  upnp_device.cpp  utils.cpp  webserver.cpp
src/capture/: desktop_capture.cpp
src/http/: cookie.cpp  request.cpp  response.cpp  webserver.cpp
test_data/: index.m3u8  index0.ts
